[package]
name = "generations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsufec = { git = "https://git.sr.ht/~yujiri/libsufec" }
sodiumoxide = "0.2.7"
ron = "0.6.5"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
base64 = "0.13.0"
termion = "1.5.6"
